Unvendor tree-sitter-perl, use crates.io version 1.1.2
What
---

Replace the vendored tree-sitter-perl parser with the crates.io crate.

Towards the unvendoring effort #891.

Why
---

The crate version 1.1.2 has fixed the heap buffer overflow bugs that existed in
the vendored version (see rough repro, probably not worth merging, in
https://github.com/Wilfred/difftastic/pull/946).

How
---

Remove the vendored parser and build.rs entry.

Add the crate dependency and update TreeSitterConfig atom_nodes.

Update highlights/perl.scm for changed node names in 1.1.2:

* call_expression -> call_expression_with_bareword
* Remove named_block_statement, hash_arrow_operator, bareword (no longer exist)
* patter_matcher_m -> pattern_matcher_m (typo fix)
* semi_colon -> ";" (now a literal)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,6 +107,7 @@ tree-sitter-nix = "0.0.2"
 tree-sitter-objc = "3.0.2"
 tree-sitter-ocaml = "0.23.2"
 tree-sitter-pascal = "0.10.0"
+tree-sitter-perl = "1.1.2"
 tree-sitter-php = "0.23.11"
 tree-sitter-proto = "0.2.0"
 tree-sitter-python = "0.23.5"
